<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sm_nav_test</name>
  <version>2.3.20</version>
  <description>The sm_nav_test package</description>
  <maintainer email="socialdroids@socialdroids.com">Socialdroids</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cl_ros2_timer</depend>
  <depend>nav2z_client</depend>
  <depend>smacc2</depend>
  <depend>backward_ros</depend>

  <exec_depend>xterm</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
